--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,27 +115,7 @@ android {
             jniLibs.srcDirs = ['libs']//重新配置路径
         }
     }
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            if (output.outputFile != null && output.outputFile.name.endsWith('.apk')) {
-                def fileName
-                fileName = "appName${variant.buildType.name}_v${defaultConfig.versionName}_${packageTime()}_${variant.productFlavors[0].name}.apk"
-                output.outputFile = new File( output.outputFile.parent, fileName)
-            }
-            //每次我们编译的时候，都会自动帮你保存mapping文件到本地的
-            if (variant.getBuildType().isMinifyEnabled()) {
-                variant.assemble.doLast {
-                    copy {
-                        from variant.mappingFile
-                        into "${projectDir}/mappings"
-                        rename { String fileName ->
-                            "mapping-${variant.name}.txt"
-                        }
-                    }
-                }
-            }
-        }
-    }
+
 
 }
 
@@ -167,26 +147,19 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':retrofitex')
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-//    releaseCompile project(path: ':domain', configuration: 'release')
-//    debugCompile project(path: ':domain', configuration: 'debug')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:support-annotations:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:support-annotations:25.2.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    //rx
-    provided 'io.reactivex:rxandroid:1.2.1'
-    provided 'io.reactivex:rxjava:1.3.0'
-    compile ('com.trello:rxlifecycle-components:1.0'){
-        exclude group: 'com.android.support'
-    }
-    compile 'com.trello:rxlifecycle-android:1.0'
-    //UI
-    compile 'com.jakewharton.rxbinding:rxbinding:1.0.1'
-    compile 'com.jakewharton.rxrelay:rxrelay:1.2.0'
 
-    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
+    //UI
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+
     compile "com.fasterxml.jackson.core:jackson-databind:2.7.0"//自动依赖ackson.core 和ackson-annotations
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.katelee.widget:recyclerviewlayout:0.9.5'
@@ -201,7 +174,7 @@ dependencies {
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile 'com.github.medyo:dynamicbox:1.2@aar'
     compile 'cat.ereza:customactivityoncrash:1.4.0'
-    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
+//    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
 
 
     compile 'de.hdodenhof:circleimageview:1.3.0'
